<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--  TODO: image  -->

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/purple_200"
        android:text="@string/default_recipe_name" />

    <TextView
        android:id="@+id/recipe_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_ingredients"
        android:textSize="12sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/recipe_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/default_instructions"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
