<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    android:background="@color/gray"
    >

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5sp"
        >
        <TextView
            android:id="@+id/meal_plan_week_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/purple_500"
            android:layout_margin="5sp"
            android:text="@string/default_weekday" />

        <TextView
            android:id="@+id/meal_plan_date"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_meal_plan_date"
            android:textSize="12sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/meal_plan_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/default_user_name"
            android:layout_marginBottom="10dp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5sp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_margin="5sp"
            android:id="@+id/meal_plan_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_meal_plan_type"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/meal_plan_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/purple_200"
            android:text="@string/default_meal_plan_name"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</LinearLayout>
