<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title"/>

    <EditText
        android:id="@+id/editTextIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredients"/>

    <EditText
        android:id="@+id/editTextInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructions"/>

    <Button
        android:id="@+id/buttonAddRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/add_recipe"/>
</LinearLayout>
