<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blog_title"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:id="@+id/blog_title"
        />
    <TextView
        android:id="@+id/blog_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/default_user_name"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/blog_image"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:gravity="start"
            android:layout_gravity="start"
            android:layout_margin="5sp"
            android:src="@drawable/hogwards"
        />
        <TextView
            android:id="@+id/blog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/blog_content"
            android:maxLines="10"
            />
    </LinearLayout>

</LinearLayout>
