<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_avatar_male"
            android:id="@+id/contact_user_image"
            android:contentDescription="@string/user_image"
            android:layout_margin="5sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_user_name"
            android:textColor="@color/purple_200"
            android:layout_margin="5sp"
            android:id="@+id/contact_user_name"
            android:gravity="center"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <Space
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email"
        android:id="@+id/contact_email_image"
        android:contentDescription="@string/user_email"
        android:layout_margin="5sp"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone"
        android:id="@+id/contact_phone_image"
        android:contentDescription="@string/user_email"
        android:layout_margin="5sp"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_message"
        android:id="@+id/contact_message_image"
        android:contentDescription="@string/user_email"
        android:layout_margin="5sp"
        />
</LinearLayout>
